# iphone-lidar-vggt

./: .gitignore  README.md  SCHEMA.md  pyproject.toml  run.sh
backend/tests/: test_api.py  test_generative.py  test_geometry.py  test_io.py  test_point_cloud.py  test_reconstruct.py  test_reconviagen.py  test_segmentation.py  test_vggt_adapter.py
backend/vggt_lidar_scan/: __init__.py  api.py  cli.py  generative.py  geometry.py  io.py  lidar.py  models.py  ply.py  point_cloud.py  reconstruct.py  reconviagen.py  reconviagen_worker.py  segmentation.py  spar3d_runner.py  vggt_adapter.py  vggt_manager.py
ios/VGGTLiDARScanApp/: ARScanView.swift  BackendClient.swift  BackendModels.swift  BackendSettingsView.swift  ContentView.swift  PLYGeometry.swift  PLYModel.swift  PointCloudPreview.swift  ResultPreviewScreen.swift  ScanPackageExporter.swift  ScanSessionManager.swift  VGGTLiDARScanApp.swift
ios/VGGTLiDARScanApp.xcodeproj/: project.pbxproj
ios/VGGTLiDARScanApp.xcodeproj/xcuserdata/mokyabun.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/VGGTLiDARScanApp/App/: ContentView.swift  Info.plist
ios/VGGTLiDARScanApp/Backend/: BackendClient.swift  BackendModels.swift  BackendSettingsView.swift  PipelineSelector.swift
ios/VGGTLiDARScanApp/Preview/: PLYParser.swift  PointCloudPreview.swift  ResultPreviewScreen.swift  ScenePLYView.swift
ios/VGGTLiDARScanApp/Scanning/: ScanModels.swift  ScanPackageExporter.swift  ScanSessionManager.swift  ZipWriter.swift
legacy/server/: run.sh
legacy/server/api/: reconviagen.py  scan_io.py
legacy/server/scripts/: prepare_reconviagen.sh
legacy/server/scripts/env/: api.sh  build_cache.sh
legacy/server/scripts/install/: uv.sh
legacy/server/scripts/lib/: common.sh
legacy/server/static/: app.js  styles.css
legacy/server/workers/reconviagen/: requirements.txt  service.py  settings.py
legacy/server/workers/reconviagen/scripts/: env.sh  packages.sh  prepare.sh  repo.sh
scripts/: create_vast_templates.py
server/: .env  README.md  environment.yml  manage.sh  pyproject.toml  reconviagen-environment.yml  run.sh
server/api/: __init__.py  api.py  config.py  environment.yml  models.py  pipeline.py  ply.py  reconviagen.py  requirements.txt  sam3.py
server/lidar_reconviagen/: api.py  config.py  geometry.py  mask.py  pipeline.py  reconviagen.py
server/orchestration/: pyproject.toml
server/orchestration/src/orchestration/: api.py  cli.py  lidar.py  models.py  point_cloud.py  reconstruct.py  segmentation.py  settings.py
server/orchestration/tests/: test_api.py  test_geometry.py  test_io.py  test_point_cloud.py  test_reconstruct.py  test_reconviagen.py  test_segmentation.py  test_vggt_adapter.py  test_worker_apps.py
server/reconviagen-runtime/: pyproject.toml
server/reconviagen-worker/: pyproject.toml
server/reconviagen-worker/src/reconviagen_worker/: __init__.py  client.py  main.py  service.py  settings.py
server/reconviagen_worker/: main.py  service.py  settings.py
server/sam3_worker/: __init__.py  main.py  requirements.txt  service.py  settings.py
server/scripts/: bootstrap_micromamba.sh  env_api.sh  env_reconviagen.sh  env_sam3.sh  lib.sh  prefetch_models.py  prepare_reconviagen.sh
server/scripts/env/: api.sh  build_cache.sh
server/scripts/install/: micromamba.sh
server/scripts/lib/: common.sh
server/static/: app.js  index.html  styles.css
server/vggt-worker/: pyproject.toml
server/vggt-worker/src/vggt_worker/: __init__.py  main.py  manager.py  service.py  settings.py
server/worker/: __init__.py  main.py  requirements.txt  service.py  settings.py
server/workers/reconviagen/: environment.yml  main.py  requirements.txt  service.py  settings.py
server/workers/reconviagen/scripts/: env.sh  extensions.sh  models.sh  packages.sh  prepare.sh  runtime.sh
