[project]
name = "vggt-iphone-lidar"
version = "0.1.0"
description = "iPhone/iPad LiDAR scan capture and VGGT post-processing MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "numpy>=1.26.0,<2",
  "pillow>=10.0.0",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
reconstruction = [
  "open3d>=0.18.0",
]
vggt = [
  "torch>=2.4.0",
  "torchvision>=0.19.0",
  "huggingface-hub>=0.24.0",
  "einops>=0.8.0",
  "opencv-python>=4.10.0",
  "safetensors>=0.4.0",
]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[project.scripts]
scan-reconstruct = "vggt_lidar_scan.cli:app"
vggt-prepare = "vggt_lidar_scan.vggt_manager:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
