[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vggt-orchestration"
version = "0.1.0"
description = "FastAPI, CLI, LiDAR reconstruction, and shared scan orchestration code"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "numpy>=1.26.0,<2",
  "pillow>=10.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.9",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
reconstruction = [
  "open3d>=0.18.0",
]
segmentation = [
  "opencv-python>=4.10.0",
  "timm>=1.0.0",
  "ultralytics>=8.3.237",
]

[project.scripts]
scan-reconstruct = "orchestration.cli:app"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
