[project]
name = "reconviagen-runtime"
version = "0.1.0"
description = "Python 3.10 runtime environment for the ReconViaGen worker"
requires-python = ">=3.10,<3.11"
dependencies = [
  "torch==2.4.0",
  "torchvision==0.19.0",
  "reconviagen-worker",
  "pillow",
  "imageio",
  "imageio-ffmpeg",
  "tqdm",
  "easydict",
  "opencv-python-headless",
  "scipy",
  "ninja",
  "scikit-image",
  "rembg",
  "onnxruntime",
  "trimesh",
  "open3d",
  "xatlas",
  "pyvista",
  "pymeshfix",
  "igraph",
  "lpips",
  "kornia==0.8.2",
  "timm==1.0.22",
  "huggingface-hub==0.36.2",
  "transformers==4.57.1",
  "zstandard",
  "rtree",
  "fast-simplification",
  "utils3d",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
reconviagen-worker = { path = "../reconviagen-worker", editable = true }
utils3d = { git = "https://github.com/EasternJournalist/utils3d.git", rev = "9a4eb15e4021b67b12c460c7057d642626897ec8" }
