[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reconviagen-worker"
version = "0.1.0"
description = "ReconViaGen client, worker, and mesh alignment integration"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "numpy>=1.26.0,<2",
  "pillow>=10.0.0",
  "pydantic-settings>=2.6.0",
  "uvicorn>=0.30.0",
  "vggt-orchestration",
]

[project.optional-dependencies]
mesh = [
  "open3d>=0.18.0",
  "scikit-image>=0.24.0",
  "scipy>=1.13.0",
  "trimesh>=4.4.1",
]

[project.scripts]
reconviagen-worker = "reconviagen_worker.main:main"

[tool.uv]
package = true

[tool.uv.sources]
vggt-orchestration = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]
