[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reconviagen-worker"
version = "0.1.0"
description = "ReconViaGen client, worker, and mesh alignment integration"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "pillow>=10.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.6.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
client = [
  "numpy>=1.26.0,<2",
  "vggt-orchestration",
]
mesh = [
  "numpy>=1.26.0,<2",
  "open3d>=0.18.0,<0.19.0",
  "scikit-image>=0.24.0",
  "scipy>=1.13.0",
  "trimesh>=4.4.1",
  "vggt-orchestration",
]

[project.scripts]
reconviagen-worker = "reconviagen_worker.main:main"

[tool.uv]
package = true

[tool.uv.sources]
vggt-orchestration = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]
